Revert "Fixed: Nav buttons wrapping out of box"
This reverts commit eb8b41d36502ea09a433abc801642e183c12d4ea.

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -52,14 +52,12 @@ header.homepage__header {
                 border-right: 1px solid #1152CF;
             }
         }
-        #apply__filters {
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-        }
         button {
+            -ms-flex-item-align: end;
+                align-self: flex-end;
             height: 48px;
             margin-right: 16px;
+            margin-bottom: 16px;
         }
         select {
             margin-right: 16px;
@@ -181,14 +179,10 @@ header.homepage__header {
         grid-template-columns: 1fr;
     }
     header.homepage__header {
-        height: 320px;
         #query {
             #filter__by__price {
                 width: 100%;
                 margin-right: 0;
-            }
-            #sort__by__price {
-                margin-bottom: 16px;
             }
             select {
                 width: auto;
